fixed footer issues on mobile view and customizes scrollbars for any overflow

--- a/Client/src/Components/PageFooter/PageFooter.scss
+++ b/Client/src/Components/PageFooter/PageFooter.scss
@@ -4,21 +4,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .footer {
-display: none;
 
-    @include tablet {
         display: flex;
         position: absolute;
         bottom: 0;
         right: 0; 
-    }    
+       
 
     &__workblock-link {
         font-family: 'Roboto';
         color: #00810D;
         opacity: .85;
         letter-spacing: 1.2px;
-        padding-bottom: 2rem;
-        padding-right: 4rem;
+        padding-bottom: 1rem;
+        padding-right: 3rem;
     }
 }
